[package]
name = "blog-rust-async"
version = "0.1.0"
authors = ["songyzh <mailsyzh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.2", features = [ "mysql", "chrono" ] }

env_logger = "0.7.1"
async-std = { version = "1.4.0", features = [ "attributes" ] }
tide = "0.5.1"

serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0"

futures = "0.3.3"
chrono = { version = "0.4", features = ["serde"] }
